--- a/src/Sodium.Core/Sodium.Core.csproj
+++ b/src/Sodium.Core/Sodium.Core.csproj
@@ -7,7 +7,7 @@
     <AssemblyTitle>Sodium.Core</AssemblyTitle>
     <VersionPrefix>1.2.3</VersionPrefix>
     <Authors>tabrath</Authors>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <LangVersion>9.0</LangVersion>
     <AssemblyName>Sodium.Core</AssemblyName>
     <PackageId>Sodium.Core</PackageId>
     <PackageTags>libsodium;xamarin;xamarin.ios;xamarin.android</PackageTags>
@@ -19,8 +19,6 @@
     <PackageProjectUrl>https://github.com/tabrath/libsodium-core/</PackageProjectUrl>
     <RootNamespace>Sodium</RootNamespace>
     <PackageIconUrl>http://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Salt_shaker_on_white_background.jpg/220px-Salt_shaker_on_white_background.jpg</PackageIconUrl>
-    <PreserveCompilationContext>true</PreserveCompilationContext>
-    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -46,5 +44,7 @@
   <ItemGroup>
     <PackageReference Include="libsodium" Version="1.0.18.2" />
   </ItemGroup>
+
+  <Import Project="..\Interop\Interop.projitems" Label="Shared" />
 
 </Project>
