Check for overflow/underflow in arithmetic expressions

--- a/test/Sodium.Tests/Sodium.Tests.csproj
+++ b/test/Sodium.Tests/Sodium.Tests.csproj
@@ -5,6 +5,7 @@
     <LangVersion>9.0</LangVersion>
     <Features>strict</Features>
     <Nullable>enable</Nullable>
+    <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
