--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -4,14 +4,14 @@ on: [push, pull_request]
 
 jobs:
 
-  build:
+  test-windows:
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Setup .NET 6.0
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: 6.0.x
+        dotnet-version: '6.0.x'
     - run: dotnet --info
     - name: Test (.NET 6.0/Debug)
       run: dotnet test -f net6.0 -c Debug
@@ -20,6 +20,34 @@ jobs:
     - name: Pack
       run: dotnet pack -c Release
     - name: Upload artifacts
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         path: '**/*.nupkg'
+
+  test-linux:
+    runs-on: linux-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Setup .NET 6.0
+      uses: actions/setup-dotnet@v2
+      with:
+        dotnet-version: '6.0.x'
+    - run: dotnet --info
+    - name: Test (.NET 6.0/Debug)
+      run: dotnet test -f net6.0 -c Debug
+    - name: Test (.NET 6.0/Release)
+      run: dotnet test -f net6.0 -c Release
+
+  test-macos:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Setup .NET 6.0
+      uses: actions/setup-dotnet@v2
+      with:
+        dotnet-version: '6.0.x'
+    - run: dotnet --info
+    - name: Test (.NET 6.0/Debug)
+      run: dotnet test -f net6.0 -c Debug
+    - name: Test (.NET 6.0/Release)
+      run: dotnet test -f net6.0 -c Release
