--- a/src/Sodium.Core/Sodium.Core.csproj
+++ b/src/Sodium.Core/Sodium.Core.csproj
@@ -14,7 +14,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <Version>1.2.3</Version>
+    <Version>1.3.0-preview1</Version>
   </PropertyGroup>
 
   <PropertyGroup>
