Add unauthenticated ChaCha20 IETF (#86)
* Interop: Add ChaCha20Ietf.cs.

* StreamEncryption.cs: Add ChaCha20 IETF.

* StreamEncryption.cs: Add documentation comment.

* test: Add ChaCha20 IETF tests.

* Interop.yaml: Add ChaCha20Ietf.

* Interop.projitems: Add ChaCha20 IETF.

* Nits

Co-authored-by: ektrah <ektrah@users.noreply.github.com>

--- a/src/Interop/Interop.yaml
+++ b/src/Interop/Interop.yaml
@@ -217,6 +217,14 @@ Interop.Stream.ChaCha20.cs:
   functions:
     - crypto_stream_chacha20_xor
 
+Interop.Stream.ChaCha20Ietf.cs:
+  include: include/sodium/crypto_stream_chacha20.h
+  constants:
+    - crypto_stream_chacha20_ietf_KEYBYTES
+    - crypto_stream_chacha20_ietf_NONCEBYTES
+  functions:
+    - crypto_stream_chacha20_ietf_xor
+
 Interop.Stream.XChaCha20.cs:
   include: include/sodium/crypto_stream_xchacha20.h
   constants:
