--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,6 +12,7 @@ jobs:
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: '6.0.x'
+    - run: dotnet workload install android ios maccatalyst
     - run: dotnet --info
     - name: Test (.NET 6.0/Debug)
       run: dotnet test -f net6.0 -c Debug
@@ -32,6 +33,7 @@ jobs:
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: '6.0.x'
+    - run: dotnet workload install android
     - run: dotnet --info
     - name: Test (.NET 6.0/Debug)
       run: dotnet test -f net6.0 -c Debug
@@ -44,6 +46,7 @@ jobs:
       image: mcr.microsoft.com/dotnet/sdk:6.0-alpine
     steps:
     - uses: actions/checkout@v3
+    - run: dotnet workload install android
     - run: dotnet --info
     - name: Test (.NET 6.0/Debug)
       run: dotnet test -f net6.0 -c Debug
@@ -58,6 +61,7 @@ jobs:
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: '6.0.x'
+    - run: dotnet workload install android ios maccatalyst
     - run: dotnet --info
     - name: Test (.NET 6.0/Debug)
       run: dotnet test -f net6.0 -c Debug
