--- a/src/Sodium.Core/Sodium.Core.csproj
+++ b/src/Sodium.Core/Sodium.Core.csproj
@@ -39,7 +39,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="libsodium" Version="1.0.19" />
+    <PackageReference Include="libsodium" Version="[1.0.19.2,1.0.20)" />
   </ItemGroup>
 
   <Import Project="..\Interop\Interop.projitems" Label="Shared" />
