--- a/test/Sodium.Tests/Sodium.Tests.csproj
+++ b/test/Sodium.Tests/Sodium.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net8.0;net6.0</TargetFrameworks>
+    <TargetFrameworks>net8.0</TargetFrameworks>
     <LangVersion>10.0</LangVersion>
     <Features>strict</Features>
     <Nullable>enable</Nullable>
