Update supported OS and .NET versions

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -6,17 +6,22 @@ jobs:
 
   test-windows-x64:
     needs: test-alpine-x64
-    runs-on: windows-latest
+    runs-on: windows-2022
     steps:
     - name: Set up .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: |
           8.0.x
+          9.0.x
     - name: Install workloads
       run: dotnet workload install ios tvos maccatalyst
     - run: dotnet --info
     - uses: actions/checkout@v4
+    - name: Test (.NET 9.0/Debug)
+      run: dotnet test -f net9.0 -c Debug
+    - name: Test (.NET 9.0/Release)
+      run: dotnet test -f net9.0 -c Release
     - name: Test (.NET 8.0/Debug)
       run: dotnet test -f net8.0 -c Debug
     - name: Test (.NET 8.0/Release)
@@ -37,8 +42,13 @@ jobs:
       with:
         dotnet-version: |
           8.0.x
+          9.0.x
     - run: dotnet --info
     - uses: actions/checkout@v4
+    - name: Test (.NET 9.0/Debug)
+      run: dotnet test -f net9.0 -c Debug
+    - name: Test (.NET 9.0/Release)
+      run: dotnet test -f net9.0 -c Release
     - name: Test (.NET 8.0/Debug)
       run: dotnet test -f net8.0 -c Debug
     - name: Test (.NET 8.0/Release)
@@ -47,14 +57,14 @@ jobs:
   test-alpine-x64:
     runs-on: ubuntu-latest
     container:
-      image: mcr.microsoft.com/dotnet/sdk:8.0-alpine
+      image: mcr.microsoft.com/dotnet/sdk:9.0-alpine
     steps:
     - run: dotnet --info
     - uses: actions/checkout@v4
-    - name: Test (.NET 8.0/Debug)
-      run: dotnet test -f net8.0 -c Debug
-    - name: Test (.NET 8.0/Release)
-      run: dotnet test -f net8.0 -c Release
+    - name: Test (.NET 9.0/Debug)
+      run: dotnet test -f net9.0 -c Debug
+    - name: Test (.NET 9.0/Release)
+      run: dotnet test -f net9.0 -c Release
 
   test-macos-arm64:
     needs: test-windows-x64
@@ -65,8 +75,13 @@ jobs:
       with:
         dotnet-version: |
           8.0.x
+          9.0.x
     - run: dotnet --info
     - uses: actions/checkout@v4
+    - name: Test (.NET 9.0/Debug)
+      run: dotnet test -f net9.0 -c Debug
+    - name: Test (.NET 9.0/Release)
+      run: dotnet test -f net9.0 -c Release
     - name: Test (.NET 8.0/Debug)
       run: dotnet test -f net8.0 -c Debug
     - name: Test (.NET 8.0/Release)
