Remove support for .NET 8
.NET MAUI 8 is out of support

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -6,26 +6,21 @@ jobs:
 
   test-windows-x64:
     needs: test-alpine-x64
-    runs-on: windows-2022
+    runs-on: windows-latest
     steps:
     - name: Set up .NET
-      uses: actions/setup-dotnet@v4
+      uses: actions/setup-dotnet@v5
       with:
         dotnet-version: |
-          8.0.x
           9.0.x
     - name: Install workloads
       run: dotnet workload install ios tvos maccatalyst
     - run: dotnet --info
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v6
     - name: Test (.NET 9.0/Debug)
       run: dotnet test -f net9.0 -c Debug
     - name: Test (.NET 9.0/Release)
       run: dotnet test -f net9.0 -c Release
-    - name: Test (.NET 8.0/Debug)
-      run: dotnet test -f net8.0 -c Debug
-    - name: Test (.NET 8.0/Release)
-      run: dotnet test -f net8.0 -c Release
     - name: Pack
       run: dotnet pack -c Release
     - name: Upload artifacts
@@ -38,21 +33,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Set up .NET
-      uses: actions/setup-dotnet@v4
+      uses: actions/setup-dotnet@v5
       with:
         dotnet-version: |
-          8.0.x
           9.0.x
     - run: dotnet --info
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v6
     - name: Test (.NET 9.0/Debug)
       run: dotnet test -f net9.0 -c Debug
     - name: Test (.NET 9.0/Release)
       run: dotnet test -f net9.0 -c Release
-    - name: Test (.NET 8.0/Debug)
-      run: dotnet test -f net8.0 -c Debug
-    - name: Test (.NET 8.0/Release)
-      run: dotnet test -f net8.0 -c Release
 
   test-alpine-x64:
     runs-on: ubuntu-latest
@@ -60,7 +50,7 @@ jobs:
       image: mcr.microsoft.com/dotnet/sdk:9.0-alpine
     steps:
     - run: dotnet --info
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v6
     - name: Test (.NET 9.0/Debug)
       run: dotnet test -f net9.0 -c Debug
     - name: Test (.NET 9.0/Release)
@@ -71,18 +61,13 @@ jobs:
     runs-on: macos-latest
     steps:
     - name: Set up .NET
-      uses: actions/setup-dotnet@v4
+      uses: actions/setup-dotnet@v5
       with:
         dotnet-version: |
-          8.0.x
           9.0.x
     - run: dotnet --info
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v6
     - name: Test (.NET 9.0/Debug)
       run: dotnet test -f net9.0 -c Debug
     - name: Test (.NET 9.0/Release)
       run: dotnet test -f net9.0 -c Release
-    - name: Test (.NET 8.0/Debug)
-      run: dotnet test -f net8.0 -c Debug
-    - name: Test (.NET 8.0/Release)
-      run: dotnet test -f net8.0 -c Release
